# SecRandom-Win7-Port

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Secrandom.spec  build_err.txt  build_log.txt  build_nuitka.py  build_pyinstaller.py  main.py  metadata.yaml  packaging_utils.py  packaging_utils_deb.py  pyproject.toml  secrandom_ipc_send_url.py
.github/workflows/: build.yml
.run/: Run SecRandom Desktop.run.xml
CHANGELOG/v2.3.10/: CHANGELOG.md
CHANGELOG/v2.3.100/: CHANGELOG.md
CHANGELOG/v2.3.12/: CHANGELOG.md
CHANGELOG/v2.3.15/: CHANGELOG.md
app/Language/modules/: basic_settings.py  countdown_timer.py  extraction_settings.py  floating_window_management.py  history.py  list_management.py  more_settings.py  music_settings.py  notification_settings.py  voice_settings.py
app/common/IPC_URL/: csharp_ipc_handler.py  protocol_manager.py  security_verifier.py  url_command_handler.py  url_ipc_handler.py
app/common/behind_scenes/: behind_scenes_utils.py
app/common/camera_preview_backend/: audio_player.py  detection.py  devices.py  image_utils.py  workers.py
app/common/data/: list.py
app/common/display/: result_display.py  weight_panel.py
app/common/extraction/: cses_parser.py  extract.py
app/common/fair_draw/: avg_gap_protection.py
app/common/history/: file_utils.py  utils.py  weight_utils.py
app/common/lottery/: lottery_manager.py  lottery_utils.py
app/common/notification/: notification_service.py
app/common/roll_call/: roll_call_manager.py  roll_call_utils.py
app/common/safety/: secure_store.py  totp.py  usb.py
app/common/search/: settings_search_controller.py
app/common/shortcut/: shortcut_manager.py
app/common/voice/: __init__.py  edge_tts_worker.py  voice.py
app/common/windows/: uiaccess.py
app/core/: app_init.py  font_manager.py  single_instance.py  utils.py  window_manager.py
app/page_building/: another_window.py  main_window_page.py  page_template.py  settings_window_page.py  window_template.py
app/tools/: button_draw_utils.py  config.py  language_manager.py  online_status.py  path_utils.py  personalised.py  platform_report.py  qfw_compat.py  settings_access.py  settings_default.py  settings_default_storage.py  theme_loader.py  update_utils.py  url_handler.py  variable.py
app/view/another_window/: backup_manager.py  contributor.py  countdown_timer.py  current_config_viewer.py  log_viewer.py  remaining_list.py  weight_formula.py
app/view/components/: center_flow_layout.py  checkable_combo_box.py  dev_hint_widget.py  touch_password_line_edit.py
app/view/floating_window/: __init__.py  levitation.py
app/view/guide/: guide_window.py  pages.py
app/view/main/: camera_preview.py  lottery.py  quick_draw_animation.py  roll_call.py  (+1 more)
config/: behind_scenes.json  settings.json
data/: device_uuid.json
secrandom.egg-info/: PKG-INFO  requires.txt
(+51 files in other folders)
